--- a/src/styles/main/_layout.scss
+++ b/src/styles/main/_layout.scss
@@ -2,7 +2,7 @@
 html{
   overflow-x:hidden;
 }
-html, body, #wrapper, .container{
+html, body, #wrapper, .container, .page-container{
   height:100%;
 }
 .container{
