--- a/src/styles/main/_c_global_panel.scss
+++ b/src/styles/main/_c_global_panel.scss
@@ -17,10 +17,15 @@
 }
 
 .global-panel-item{
+
+  display:block;
   padding-top:19px;
   padding-bottom:13px;
   font-size:38px;
   cursor:pointer;
+  text-decoration: none;
+
+  color:$gray-darker;
   @extend %border-bottom;
   position:relative;
 
