--- a/src/styles/main/_c_chat_room.scss
+++ b/src/styles/main/_c_chat_room.scss
@@ -5,6 +5,7 @@
   width: 100%;
   z-index: $z-index-base;
   border-bottom:1px solid $gray-light;
+  background:$light-base;
 }
 .chat-room-inner{
   padding: 24px;
