--- a/src/styles/main/_c_chat_room.scss
+++ b/src/styles/main/_c_chat_room.scss
@@ -1,6 +1,6 @@
 .chat-room {
   position: absolute;
-  top: 70px;
+  top: 71px;
   left: 0;
   width: 100%;
   z-index: $z-index-base;
@@ -25,10 +25,35 @@
 .chat-room-members{
   margin-top:18px;
 }
+$chat-room-member-width:47px;
 
 .chat-room-member{
-  width:47px;height:47px;
+  .circle{
+    color:$red-base;
+    cursor:pointer;
+    font-size:16px;
+    position:absolute;
+    right:-6px;top:-6px;
+    visibility:hidden;
+  }
+  &:hover .circle{
+    visibility: visible;
+  }
+}
+.chat-room-members-add{
+  width:$chat-room-member-width - 2px;height:$chat-room-member-width - 2px;
+  @include border($gray-light);
+
+  font-size:32px;
+  text-align:center;
+  line-height:$chat-room-member-width - 2px;
+  cursor:pointer;
+  color:$gray-light;
+}
+.chat-room-members-add, .chat-room-member{
   position: relative;
   float:left;
   margin-right:10px;
+  width:$chat-room-member-width;height:$chat-room-member-width;
+  @include border-radius($border-radius-small);
 }
