--- a/src/styles/main/_extend.scss
+++ b/src/styles/main/_extend.scss
@@ -10,3 +10,11 @@
   border-radius:50%;
   text-align:center;
 }
+
+//circle tip
+%circle-tip{
+  @include circle(16px, $light-base, $red-base);
+}
+.circle-tip{
+  @extend %circle-tip
+}
