--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,8 +34,15 @@
 @import "main/c_work_list";
 @import "main/_c_chat_area";
 @import "main/c_emotion";
+@import "main/c_calendar_area";
+@import "main/c_calendar";
+@import "main/c_button_group";
 // $animation
 @import "main/animation";
+
+// $fullcalendar
+@import "lib/fullcalendar";
+@import "lib/fullcalendar-for-launchr";
 
 // $test
 @import "test";
