--- a/src/styles/main/_c_chat_area.scss
+++ b/src/styles/main/_c_chat_area.scss
@@ -1,11 +1,8 @@
 // chat-area
 
+
 .chat-area{
-  background: $light-base;
-  overflow:hidden;
-  position:relative;
-  @include panel(null);
-  min-width:$chat-area-width;
+  @extend %area;
   //max-width:$chat-area-max-width;
 
   width:calc((100% - 80px - 220px)/2);
