--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,7 +32,7 @@
 @import "main/c_sub_panel";
 @import "main/c_work_search";
 @import "main/c_work_list";
-@import "main/_c_chat_area";
+@import "main/c_chat_area";
 @import "main/c_emotion";
 @import "main/c_calendar_area";
 @import "main/c_calendar";
