--- a/src/styles/main/_c_chat_area.scss
+++ b/src/styles/main/_c_chat_area.scss
@@ -2,7 +2,7 @@
 
 
 .chat-area{
-  @extend %area;
+  //@extend %area;
   //max-width:$chat-area-max-width;
 
   width:calc((100% - 80px - 220px)/2);
