--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,6 +37,7 @@
 @import "main/c_calendar_area";
 @import "main/c_calendar";
 @import "main/c_button_group";
+@import "main/c_approval_area";
 // $animation
 @import "main/animation";
 
