--- a/src/styles/main/_extend.scss
+++ b/src/styles/main/_extend.scss
@@ -33,3 +33,21 @@
   float:left;
   margin-right:8px;
 }
+
+// used on .calendar-action-search and .approval-search
+%icon-search{
+  font-size:24px;
+  vertical-align:middle;
+  cursor:pointer;
+}
+
+%detail-area-title{
+  padding: 23px 0 22px;
+  border-bottom: 1px solid $gray-light;
+}
+%half-detail-area{
+  width:calc((100% - 80px - 220px)/2);
+  @media (min-width:$media-middle-width){
+    width:calc((100% - 100px - 300px)/2);
+  }
+}
