--- a/src/styles/main/_extend.scss
+++ b/src/styles/main/_extend.scss
@@ -51,3 +51,37 @@
     width:calc((100% - 100px - 300px)/2);
   }
 }
+
+// used on .work-item and approval-item
+%work-item{
+  overflow:hidden;
+  cursor:pointer;
+}
+
+%work-item-info{
+  overflow:hidden;
+
+  h3{
+    margin:8px 0 0 5px;
+  }
+  h4{
+    @extend %ellipsis;
+    width:100%;
+    font-size:14px;
+    font-weight:400;
+  }
+
+  p{
+    font-size:$font-size-small;
+    @extend %ellipsis;
+    width:100%;
+    color:$gray-darker;
+    margin-top:3px;
+  }
+}
+
+%work-item-time{
+  float:right;
+  font-size: $font-size-small;
+  color: $gray-darker;
+}
