--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,5 +45,8 @@
 @import "lib/fullcalendar";
 @import "lib/fullcalendar-for-launchr";
 
+// $state
+@import "main/state";
+
 // $test
 @import "test";
